XMLExper/m12/m12_485_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘tinyxml2::XMLText* tinyxml2::XMLElement::InsertNewText(const char*)’:
tinyxml2.cpp:2067:33: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLText*’ [-fpermissive]
 2067 |     return InsertEndChild(node) ? /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(node) : 0;
      |            ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                 |
      |                                 tinyxml2::XMLNode*
diff: tinyxml2.o: No such file or directory
